# mustached-octo-avenger

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: FindGLM.cmake  FindSDL2.cmake
src/: CMakeLists.txt  context.cpp  context.h  glwindow.cpp  glwindow.h  main.cpp  main.h  shader.cpp  shader.h  window.cpp  window.h
src/shaders/: simple.frag  simple.vert
