cmake_minimum_required(VERSION 2.8)
set(ProjectName mustached-octo-avenger)
project(${ProjectName})
include (InstallRequiredSystemLibraries)
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
include (CPack)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
find_package(PkgConfig REQUIRED)
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)
pkg_search_module(SDL2 REQUIRED sdl2)
include_directories(${OPENGL_INCLUDE_DIRS})
include_directories(${GLEW_INCLUDE_DIRS})
include_directories(${SDL2_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR}/src)
# SOIL Library
include_directories(${PROJECT_SOURCE_DIR}/src/soil)
file(GLOB SOIL_src ${PROJECT_SOURCE_DIR}/src/soil/*.c)
add_library(SOIL ${SOIL_src})
file(GLOB Executables ${PROJECT_SOURCE_DIR}/src/*.cpp)
add_executable (${ProjectName} ${Executables})
link_directories(${PROJECT_BINARY_DIR})
target_link_libraries(${ProjectName} ${OPENGL_LIBRARIES})
target_link_libraries(${ProjectName} ${GLEW_LIBRARIES})
target_link_libraries(${ProjectName} ${SDL2_LIBRARIES})
target_link_libraries(${ProjectName} SOIL)
#copy shaders
file(COPY ${PROJECT_SOURCE_DIR}/src/shaders DESTINATION ${PROJECT_BINARY_DIR})
#copy assets
file(COPY ${PROJECT_SOURCE_DIR}/assets DESTINATION ${PROJECT_BINARY_DIR})
#install targets
install (TARGETS ${ProjectName} DESTINATION .)
install (DIRECTORY ${PROJECT_BINARY_DIR}/shaders DESTINATION .)
install (DIRECTORY ${PROJECT_BINARY_DIR}/assets DESTINATION .)
