set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
project(mustached-octo-avenger)
find_package(PkgConfig REQUIRED)
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)
pkg_search_module(SDL2 REQUIRED sdl2)
include_directories(${OPENGL_INCLUDE_DIRS})
include_directories(${GLEW_INCLUDE_DIRS})
include_directories(${SDL2_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR})
add_executable (mustached-octo-avenger main.cpp shader.cpp)
link_directories(${PROJECT_BINARY_DIR})
target_link_libraries(mustached-octo-avenger ${OPENGL_LIBRARIES})
target_link_libraries(mustached-octo-avenger ${GLEW_LIBRARIES})
target_link_libraries(mustached-octo-avenger ${SDL2_LIBRARIES})
# copy shaders
configure_file(${PROJECT_SOURCE_DIR}/shaders/vertexshader ${PROJECT_BINARY_DIR}/shaders/vertexshader)
configure_file(${PROJECT_SOURCE_DIR}/shaders/fragmentshader ${PROJECT_BINARY_DIR}/shaders/fragmentshader)
