set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
find_package(PkgConfig REQUIRED)
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)
pkg_search_module(SDL2 REQUIRED sdl2)
include_directories(${OPENGL_INCLUDE_DIRS})
include_directories(${GLEW_INCLUDE_DIRS})
include_directories(${SDL2_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR}/src)
file(GLOB Executables ${PROJECT_SOURCE_DIR}/src/*.cpp)
add_executable (${ProjectName} ${Executables})
link_directories(${PROJECT_BINARY_DIR})
target_link_libraries(${ProjectName} ${OPENGL_LIBRARIES})
target_link_libraries(${ProjectName} ${GLEW_LIBRARIES})
target_link_libraries(${ProjectName} ${SDL2_LIBRARIES})
#copy shaders
file(COPY ${PROJECT_SOURCE_DIR}/src/shaders DESTINATION ${PROJECT_BINARY_DIR}/src)
#install targets
install (TARGETS ${ProjectName} DESTINATION .)
install (DIRECTORY ${PROJECT_BINARY_DIR}/src/shaders DESTINATION .)
